# mfix

./: .gitignore  .gitlab-ci.yml  .pylintrc  Bug_Fixes  CHANGES  CMakeLists.txt  INSTALL.md  MANIFEST.in  Makefile.am  README  README.md  README_MFIX_for_T3E  README_POSTMFIX  Readme.html  USER_GUIDE.md  configure.ac  configure_mfix  mfix.py  pymfix  readme  setup.py  switch.sh  user_guide.docx  wrap_configure
MAKE_MFIX_PYTHON/: make_mfix_byPy.py  mfix_pyth_functions.py
MAKE_MFIX_PYTHON/comp_flags/: __init__.py  gfortran_flags.py  ifort_flags.py  pgi_flags.py
Readme2005-3_files/: filelist.xml  header.htm  image003.wmz  image005.wmz  image009.wmz  image011.wmz  image013.wmz  image015.wmz  image017.wmz  image023.wmz  image027.wmz  image029.wmz  oledata.mso
Readme2005-4_files/: FILELIST.XML  HEADER.HTM  IMAGE008.WMZ  IMAGE020.WMZ  IMAGE022.WMZ  IMAGE026.WMZ  IMAGE032.WMZ  IMAGE034.WMZ  OLEDATA.MSO
ani_mfix/: DEM-PLOT-mfix_install.txt  DEM-PLOT-mfix_usage.txt  README.txt  README_vis.txt  ani_mfix_cutcell.txt
ani_mfix/DEM-PLOT-mfix_source/: MfixData.cpp  ani_mfix.con  ani_mfix.h  ani_mfix.mm  bottom_dialog.cpp  bottom_dialog.ui  data.cpp  data.h  dem-plot.pro  main.cpp  moc_ani_mfix.cpp  ui_left_dialog.h
ani_mfix/Linux/: ANIMATE-mfix.txt  DEM-PLOT-mfix.txt
ani_mfix/animate/: README_animate.txt
benchmarks/cu/: README.md  make_reports.sh  run_benchmarks.sh
benchmarks/dem/: Makefile
build-aux/: .gitignore  Dockerfile  Makefile.am  Makefile.usr.am  ax_fc_check_define.m4  ax_python.m4  ax_python_devel.m4  bld.bat  build.sh  configure.ac  fdep.in  fortran-depcomp  meta.yaml  runtests.sh  test.sh  update-usrdeps
cartesian_grid_tutorials/: run_serial
complex-chemistry/coal-gasifier1/: cp_fun1.inc  cp_fun2.inc  physical_prop.f  rrates.f  sendrecv_mod.f  set_constprop.f  transport_prop.f  usr0.f  usr_init_namelist.f  usr_mod.f  usrnlst.inc
config/: build_Makefile.sh  build_post_Makefile.sh  mpi_fun.sh  netcdf.sh  parse_args.sh  req_usr.sh  rxn_preproc.sh  set_post_incs.sh  swap_build.sh  sys_comp.sh  sys_info.sh  tau_fun.sh  tau_wrapper.sh
config/compilers/: gcc_default.sh  gnu_mac_os.sh  intel_default.sh  intel_mac_os.sh  nersc_hopper_cray.sh  nersc_hopper_gnu.sh  nersc_hopper_intel.sh  nersc_hopper_pgi.sh  portland_default.sh  portland_mac_os.sh  sbeuc_gcc-46.sh  sbeuc_intel-131.sh  win_gnu.sh
defaults/blank/: .mfixguiinfo  .thumbnail
doc/: SETUP_GUIDE.md  TUTORIALS.md  USER_GUIDE.md  build-mfix-on-windows.txt  mfix-on-windows.md
gui/: Dockerfile  Makefile  bcs.py  chemistry.py  constants.py  fluid_handler.py  gui.py  gui.spec  ics.py  interpreter.py  iss.py  job.py  mesh.py  mfix.dat.template  mfix_gui.py  mfix_threads.py  model_setup.py  monitor.py  project.py  project_manager.py  pss.py  pymfix  reaction_parser.py  regexes.py  requirements.txt  run_hpcee  solid_handler.py  solids_dem.py  solids_handler.py  solids_pic.py  solids_tfm.py  species_handler.py  species_popup.py
gui/doc/: MFIX-UI SRS.txt  spec.txt  srstotxt.sh
gui/static/: mfix.css
gui/templates/: index.html
gui/test/: test_gui.py
gui/tests/: helper_functions.py  test_base.py  test_gui.py  test_project.py
gui/tools/: comparable.py  fortrantools.py  general.py  keyword_args.py  keyword_args.txt  mfixcodeanalyzer.py  mfixoutputparser.py  mfixproject.py  mfixwebsite.py  namelistparser.py  particledatabasereader.py  read_burcat.py  simpleeval.py  stlparser.py
gui/uifiles/: Makefile  chemistry.ui  gui.ui  (+27 more)
hang/: t7.mfx
legacy_tests/: run  run_serial
mfix/: bcs.py  chemistry.py  fluid_handler.py  gui.py  ics.py  iss.py  job.py  mesh.py  model_setup.py  project.py  project_manager.py  pss.py  pymfix.py  solids_dem.py  solids_handler.py  solids_pic.py  solids_tfm.py  species_handler.py
mfixgui/: Dockerfile  Makefile  __init__.py  __main__.py  bcs.py  build_mfixsolver.py  chemistry.py  constants.py  fluid_handler.py  graphic_tabs.py  gui.py  ics.py  interpreter.py  iss.py  job.py  main_menu.py  menu-linux.json  menu-osx.json  menu-windows.json  mesh.py  mfix.dat.template  model_setup.py  monitor.py  numerics.py  output.py  project.py  project_manager.py  pss.py  pymfix.py  reaction_parser.py  regexes.py  requirements.txt  run.sh  run2.sh  run3.sh  run_hpcee  solids_dem.py  solids_handler.py  solids_pic.py  solids_tfm.py  (+3 more)
model/: AIX.F  BLAS.f  CM.F  CRAYT3E.F  CYGNT.F  IRIXF90.F  LINUX.F  LINUX_intel.F  MFIX_netcdf_constants.fi  MFIX_netcdf_misc.fi  MFIX_netcdf_overloads.fi  MFIX_netcdf_variables.fi  MINGW.F  ODEPACK.F  OSF1.F  PC.F  PGNT.F  ULTRIX.F  accum_resid.f  adjust_a_u_g.f  adjust_a_u_s.f  adjust_a_v_g.f  adjust_a_v_s.f  adjust_a_w_g.f  adjust_a_w_s.f  adjust_dt.f  adjust_dt_mod.f  adjust_eps.f  adjust_leq.f  adjust_rop.f  adjust_theta.f  allocate_arrays.f  ambm_mod.f  b_force1.inc  b_force2.inc  b_m_p_star.f  bc_mod.f  bc_phi.f  bc_theta.f  bodyforce_mod.f  (+373 more)
post_mfix/: CM.F  LINUX.F  Makefile  Makefile.am  PC.F  PGNT.F  README  ULTRIX.F  USAGE_new_makepost.txt  any_more_data.f  bc.inc  bc_mod.f  calc_cell2.f  calc_corr_01.f  calc_corr_type_1.f  calc_distance.f  calc_dpody.f  calc_ep_g.f  calc_mu_s.f  calc_mw.f  calc_quantities.f  calc_ro_g.f  calc_vol.f  check_data_03.f  check_one_axis.f  compare.f  constant.inc  correl.inc  correl_mod.f  deallocate_arrays.f  drag.inc  energy.inc  eosg.f  ep_s1.inc  ep_s2.inc  error_routine.f  examine_data.f  exit.f  f_init_data.f  file_handle.f  (+128 more)
post_mfix/cartesian_grid/: cartesian_grid_namelist.inc
post_mfix/chem/: stiff_chem_mod.f
post_mfix/config/: gfortran.sh  ifort.sh  pgi.sh  user.sh
post_mfix/des/: desnamelist.inc  write_des_data.f
post_mfix/include/: cartesian_grid_namelist.inc
pymfix/: mfix.pyf  pymfix
queue_templates/: joule
regression_tests/: nightly_results.html
static/: mfix.css  mfix.js
templates/: index.html
tests/: MFIX_Tests_Benchmarking.html  Readme-tests  collect_data  run  run_serial
tools/: make_make  make_make_byPy.py  make_make_post  mms.f  mms.f90  mms_post.f  mms_post.f90  sysinfo.sh
tutorials/: MFIX_Tutorials_Benchmarking.html  collect_data  in  run_serial
visualization_tools/: README_vis.txt
(+1347 files in other folders)
